# raster

./: .gitignore  CMakeLists.txt  readme.md
include/: common.h  filetypes.h  grayscale_colormap.h  inferno_colormap.h  viridis_colormap.h
scripts/: gen_noise.py
src/: common.c  filetypes.c  plot.c  raster.c  raster1d.c  waterfall.c
